# zed-opencv-detection

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  zed_risers_yolov4.py
cfg/: coco.names  yolov4_risers.cfg
include/: utils.hpp
src/: cpu_main.cpp  depth_estimate.cpp  gpu_main.cpp  main.cpp  opencv_detection_cpu.cpp  opencv_detection_gpu.cpp  opencv_detection_position.cpp  svo_record.cpp  yolov5.cpp  yolov5_depth.cpp  yolov5_depth_detection.cpp
yolo_params/cfg/: yolov4_risers.cfg
yolo_params/weights/: yolov4_risers.weights
